Add delete event functionality

--- a/profiles/templates/profiles/profile-posts.html
+++ b/profiles/templates/profiles/profile-posts.html
@@ -79,10 +79,29 @@
                     <!-- Card buttons -->
                     <div class="d-flex justify-content-between align-items-center pt-3">
                         <div class="btn-group">
-                            <a href="{% url 'event_detail' event.id %}"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
-                            <a href="{% url 'edit_event' event.id %}"><button type="button" class="btn btn-sm btn-outline-secondary">Edit</button></a>
-                            <a href=""><button type="button" class="btn btn-sm btn-outline-secondary">Delete</button></a>
+                            <button type="button" class="btn btn-sm btn-outline-secondary"><a href="{% url 'event_detail' event.id %}">View</a></button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary"><a href="{% url 'edit_event' event.id %}">Edit</a></button>
+                            <button type="button" class="btn btn-sm btn-outline-secondary"><a data-bs-target="#modalDeleteEvent{{ event.id }}" data-bs-toggle="modal">Delete</a></button>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Modal delete event -->
+        <div class="modal fade" id="modalDeleteEvent{{ event.id }}" tabindex="-1" aria-labelledby="modelDeleteEventLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title fw-bolder" id="modelDeleteEventLabel">Delete event</h5>
+                        <button type="button" class="btn-close btn-outline-green" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body my-4">
+                        Are you sure you want to delete the event <span class="text-purple-custom fw-bolder">"{{ event.title }}"</span>?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-outline-green" data-bs-dismiss="modal">Cancel</button>
+                        <a href="{% url 'delete_event' event.id %}" class="btn btn-green">Yes, delete event</a>
                     </div>
                 </div>
             </div>
