--- a/static/css/_profile.scss
+++ b/static/css/_profile.scss
@@ -106,4 +106,11 @@
     background-size: contain;
     min-height: 10rem;
   }
+
+  .btn-group {
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+  }
 }
