Style modal deactivate account

--- a/profiles/templates/profiles/profile-settings.html
+++ b/profiles/templates/profiles/profile-settings.html
@@ -4,25 +4,25 @@
         <div class="account-settings">
             <p class="pt-2"><i class="fas fa-envelope text-purple-custom pe-2"></i><a href="{% url 'account_email' %}"> Change email address</a></p>
             <p class="pt-2"><i class="fas fa-lock text-purple-custom pe-2"></i><a href="{% url 'account_change_password' %}"> Change Password</a></p>
-            <p class="pt-2"><i class="fas fa-trash-alt text-purple-custom pe-2"></i><a href="submit-btn anchors" data-bs-target="#exampleModal" data-bs-toggle="modal"> Deactivate account</a></p>
+            <p class="pt-2"><i class="fas fa-trash-alt text-purple-custom pe-2"></i><a href="submit-btn anchors" data-bs-target="#modalDeactiveAccount" data-bs-toggle="modal"> Deactivate account</a></p>
         </div>
     </div>
 </div>
 
 <!--Modal delete account-->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="modalDeactiveAccount" tabindex="-1" aria-labelledby="modalDeactiveAccountLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title fw-bolder" id="exampleModalLabel">Delete account</h5>
+                <h5 class="modal-title fw-bolder" id="modalDeactiveAccountLabel">Deactivate account</h5>
                 <button type="button" class="btn-close btn-outline-green" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
-                Are you sure you want to delete your account?
+            <div class="modal-body my-4">
+                Are you sure you want to deactivate your account?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-green" data-bs-dismiss="modal">No, I don't want to cancel my account</button>
-                <a href="{% url 'delete_profile' request.user.username %}" class="btn btn-outline-green">Yes, deactivate account</a>
+                <button type="button" class="btn btn-outline-green" data-bs-dismiss="modal">Cancel</button>
+                <a href="{% url 'delete_profile' request.user.username %}" class="btn btn-green">Yes, deactivate account</a>
             </div>
         </div>
     </div>
