Add directory includes to profile app

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -31,15 +31,15 @@
     <div class="tab-content" id="myTabContent">
         <!-- My details -->
         <div class="tab-pane fade show active" id="account" role="tabpanel" aria-labelledby="account-tab">
-            {% include './profile-details.html' %}
+            {% include 'includes/profile-details.html' %}
         </div>
         <!-- My posts -->
         <div class="tab-pane fade my-posts" id="posts" role="tabpanel" aria-labelledby="posts-tab">
-            {% include './profile-posts.html' %}
+            {% include 'includes/profile-posts.html' %}
         </div>
         <!-- Settings -->
         <div class="tab-pane fade" id="settings" role="tabpanel" aria-labelledby="settings-tab">
-            {% include './profile-settings.html' %}
+            {% include 'includes/profile-settings.html' %}
         </div>
     </div>
 </div>
