Create checkout app and add badge to hero homepage

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,8 +4,11 @@
 {% block content %}
 
     <!-- Hero -->
-    <section class="text-secondary px-4 py-5 text-center hero">
-        <div class="py-5">
+    <section class="text-secondary pe-4 pb-5 text-center hero">
+        <div id="triangle-badge">
+            <span class="fw-bolder">Only €1 per post!</span>
+        </div>
+        <div class="pb-5">
             <h1 class="display-5 fw-bold text-white">Our Neighbourhood:
                 <div>Drimnagh</div>
             </h1>
