--- a/profiles/templates/includes/profile-posts.html
+++ b/profiles/templates/includes/profile-posts.html
@@ -5,7 +5,7 @@
             <div class="my-posts__img"></div>
         </div>
         <div class="col-md-5 p-3 p-lg-5 pt-lg-3 my-posts__btn-container">
-            <a href="{% url 'add_event' %}">
+            <a href="{% url 'checkout' %}">
                 <button type="button" class="btn btn-outline-green btn-md px-4 me-sm-3 fw-bold">Create new events
                 </button>
             </a>
