--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -19,11 +19,36 @@
                 <p>€1.00</p>
             </div>
         </div>
+
+        <hr class="my-5">
+
+        <h5><i class="fas fa-credit-card"></i> Payment Details</h5>
+
         <div class="row my-5">
-            <div class="col text-center">
-                <a href="#" class="btn btn-green"><i class="fas fa-lock"></i> Secure checkout</a>
+            <div class="col checkout__pay-form">
+                <p class="text-start py-3">Credit or debit card</p>
+                <!-- Stripe payment form-->
+                <form action="{% url 'checkout' %}" method="POST" id="payment-form">
+                  <div class="my-3" id="card-element">
+                    <!-- Elements will create input elements here -->
+                  </div>
+
+                  <!-- We'll put the error messages in this element -->
+                  <div id="card-errors" role="alert"></div>
+
+                  <button class="btn btn-green my-3" id="submit">Pay with Stripe</button>
+                </form>
             </div>
         </div>
     </section>
 
+
+
+{% endblock %}
+
+{% block postload_js %}
+    {{ block.super }}
+    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+    {{ client_secret|json_script:"id_client_secret" }}
+    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
 {% endblock %}
