--- a/static/css/_checkout.scss
+++ b/static/css/_checkout.scss
@@ -1,14 +1,65 @@
 .checkout {
   text-align: center;
+  max-width: 70vw;
 
   &__item {
     @include bp(tablet) {
       text-align: left;
     }
   }
+
   &__amount {
     @include bp(tablet) {
       text-align: right;
     }
   }
+
+  &__pay-form {
+    border: .1rem solid rgba($gray, .3);
+  }
+}
+
+.StripeElement,
+.stripe-style-input {
+  box-sizing: border-box;
+  padding: .825rem 1.5rem;
+  border-color: rgba($gray, 0.05);
+  border-radius: .3rem;
+  background-color: rgba($gray, 0.1);
+  box-shadow: 0 1px 3px 0 #e6ebf1;
+  -webkit-transition: box-shadow 150ms ease;
+  transition: color .2s ease, background-color .2s ease;
+  color: $gray;
+}
+
+.StripeElement--focus,
+.stripe-style-input:focus,
+.stripe-style-input:active {
+  box-shadow: 0 1px 3px 0 #cfd7df;
+}
+
+.StripeElement--webkit-autofill {
+  background-color: #fefde5 !important;
+}
+
+.stripe-style-input::placeholder {
+    color: #aab7c4;
+}
+
+.fieldset-label {
+    position: relative;
+    right: .5rem;
+}
+
+#payment-form .form-control,
+#card-element {
+    max-width: 90vw;
+}
+
+.ElementsApp input {
+  font-family: $paragraph;
+}
+
+#card-errors {
+  color: #dc3545; /* colour danger */
 }
