Finalise checkout functionality

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -36,7 +36,7 @@
                 <!-- We'll put the error messages in this element -->
                 <div id="card-errors" role="alert"></div>
 
-                <button class="btn btn-green my-3" id="submit">Pay with Stripe</button>
+                <button class="btn btn-green my-3" id="submit-button">Pay with Stripe</button>
             </form>
         </div>
     </div>
