--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -17,7 +17,7 @@
                     businesses.</p>
                 <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
                     {% if request.user.is_authenticated %}
-                        <a href="{% url 'add_event' %}"><button type="button" class="btn btn-outline-green btn-lg px-4 me-sm-3 fw-bold">Create event</button></a>
+                        <a href="{% url 'checkout' %}"><button type="button" class="btn btn-outline-green btn-lg px-4 me-sm-3 fw-bold">Create event</button></a>
                     {% else %}
                         <a href="{% url 'account_signup' %}"><button type="button" class="btn btn-outline-green btn-lg px-4 me-sm-3 fw-bold">Sign up</button></a>
                         <a href="{% url 'account_login' %}"><button type="button" class="btn btn-outline-light btn-lg px-4">Log in</button></a>
