Refactor checkout functionality

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -14,8 +14,8 @@
             <p>Thank you for your payment. A confirmation email will be sent to {{ user.email_address }}</p>
         </div>
         <div class="col-12 my-4">
-            <a href="{% url 'add_event' %}">
-                <button type="button" class="btn btn-outline-green btn-md px-4 me-sm-3 fw-bold">Proceed to create event
+            <a href="{% url 'home' %}">
+                <button type="button" class="btn btn-outline-green btn-md px-4 me-sm-3 fw-bold"><i class="fas fa-undo-alt"></i> Back to home page
                 </button>
             </a>
         </div>
