Add if statement to display events paid for on user profile

--- a/events/templates/events/preview-event.html
+++ b/events/templates/events/preview-event.html
@@ -9,6 +9,11 @@
 <div class="container event-detail">
     <div class="row">
 
+        <!-- Event title -->
+        <div class="col-12 col-md-10 offset-md-2 my-4 fw-bold">
+            {{ event.title }}
+        </div>
+
         <!-- Event description -->
         <div class="col-12 col-md-10 offset-md-2 text-muted my-4">
             {{ event.description }}
