--- a/profiles/templates/includes/profile-posts.html
+++ b/profiles/templates/includes/profile-posts.html
@@ -5,7 +5,7 @@
             <div class="my-posts__img"></div>
         </div>
         <div class="col-md-5 p-3 p-lg-5 pt-lg-3 my-posts__btn-container">
-            <a href="{% url 'checkout' %}">
+            <a href="{% url 'add_event' %}">
                 <button type="button" class="btn btn-outline-green btn-md px-4 me-sm-3 fw-bold">Create new events
                 </button>
             </a>
@@ -18,6 +18,7 @@
     <h4 class="text-center page-header">My Events</h4>
     <div class="row row-cols-1 row-cols-md-2 g-4 mb-4">
         {% for event in events %}
+            {% if event.is_paid %}
         <div class="col">
             <div class="card shadow-sm h-100">
                 <div class="card-body">
@@ -106,6 +107,7 @@
                 </div>
             </div>
         </div>
+            {% endif %}
         {% endfor %}
     </div>
 </div>
