--- a/profiles/templates/includes/profile-posts.html
+++ b/profiles/templates/includes/profile-posts.html
@@ -28,11 +28,13 @@
                     <!-- Event description -->
                     <p class="card-text text-muted">{{ event.description }}</p>
 
+                    <hr>
+
                     <!-- Event category -->
                     <p class="pt-2"><span class="badge card-content__badge">{{ event.event_category }}</span></p>
 
                     <!-- Event details -->
-                    <div class="py-3">
+                    <div class="pt-2 pb-3">
                         {% if event.event_date %}
                             <div class="card-content__key fw-bolder">
                                 <p>Date:</p>
