--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -10,7 +10,7 @@
 
 <!-- Profile -->
 <!--Design inspired by https://themes.getbootstrap.com/preview/?theme_id=85897-->
-<div class="container my-profile">
+<div class="container my-profile shadow-sm">
     <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
             <button class="nav-link active fw-bolder" id="home-tab" data-bs-toggle="tab" data-bs-target="#account" type="button"
