--- a/static/css/_profile.scss
+++ b/static/css/_profile.scss
@@ -1,6 +1,8 @@
 //Profile - main page
 .my-profile {
-  border: .1rem solid rgba($gray, .3);
+  border: 1px solid rgba(0,0,0,.125); /* .card border */
+  border-radius: .25rem; /* .card border-radius */
+  max-width: 70vw;
 
   .nav-tabs,
   .nav-link {
